# Memora

.github/workflows/: cd.yml
backend/: .gitignore  pyproject.toml
backend/agents/: memory_agent.py
backend/api/: main.py
backend/api/controllers/: auth.py  conversations.py
backend/api/routes/: auth.py  conversations.py  memory.py
backend/db/models/: user.py
backend/exports/: parser.py  sql_init.py  types.py
backend/llm/: orchestrator.py  prompts.py  providers.py
backend/memory/: episodic_mem.py  memory_manager.py  procedural_mem.py
backend/storage/: memory_store.py  vector_store.py
backend/tools/: memory_tools.py
backend/update/: dedup.py  updater.py
backend/utils/: embeddings.py  extractor.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/memories/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/components/layout/: sidebar.tsx
frontend/context/: AuthContext.tsx
frontend/lib/api/: auth.ts  client.ts  conversations.ts  memories.ts
